# SViper

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.md  get_supporting_reads.py  polishing.config  process_sample.sh  process_sequence2.sh  process_variant.sh  process_variant2.sh  process_variant3.sh  process_variant4.sh  sweep_sample.sh  sweep_sequence.sh  sweep_variant.sh
include/: auxiliary.h  basics.h  config.h  evaluate_final_mapping.h  io.h  mapping.h  mateHunter.h  merge_split_alignments.h  misc.h  polishing.h  stats.h  sviper.h  variant.h
include/SViper/: auxiliary.h  basics.h  config.h  evaluate_final_mapping.h  io.h  mapping.h  mateHunter.h  merge_split_alignments.h  polishing.h  stats.h  sviper.h  variant.h
include/sviper/: auxiliary.h  basics.h  config.h  evaluate_final_mapping.h  io.h  mapping.h  mateHunter.h  merge_split_alignments.h  polishing.h  stats.h  sviper.h  variant.h
src/: basics.h  build_consensus.cpp  build_consensus_2.cpp  build_consensus_from_all_reads.cpp  compute_region_positions_from_cigar.cpp  config.h  evaluate_final_mapping.cpp  evaluate_final_mapping.h  helper_functions.h  merge_split_alignments.h  merge_supplementary_alignments.cpp  numtMateHunt.cpp  pairwise_alignment_to_mapping.cpp  polishing.cpp  polishing.h  polishing2.cpp  sviper.cpp  utilities_compare_vcf.cpp  utilities_get_supporting_reads.cpp  utilities_merge_split_alignments.cpp  utilities_stats.cpp  variant.h
tests/: CMakeLists.txt  sviper_test.sh
